WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20047
Incorrect rendering during opacity transition on element with positioned children
https://bugs.webkit.org/show_bug.cgi?id=20047
Summary
Incorrect rendering during opacity transition on element with positioned chil...
Simon Fraser (smfr)
Reported
2008-07-15 16:30:02 PDT
In the attached testcase, a positioned element runs a transition when its opacity changes on :hover. However, a child element which is positioned snaps to the final opacity, without showing the transition, which is wrong. This only happens if: * the child is positioned * the target opacity is 1 I think it's related to stacking context changes when opacity hits 1.
Attachments
Testcase
(954 bytes, text/html)
2008-07-15 16:30 PDT
,
Simon Fraser (smfr)
no flags
Details
Better testcase; reveals stacking context
(1.61 KB, text/html)
2008-07-15 16:58 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch (with some FIXMES)
(1.54 KB, patch)
2008-07-15 17:04 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch, testcase, changelogs
(5.02 KB, patch)
2008-07-16 15:48 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2008-07-15 16:30:25 PDT
Created
attachment 22293
[details]
Testcase
Simon Fraser (smfr)
Comment 2
2008-07-15 16:58:30 PDT
Created
attachment 22295
[details]
Better testcase; reveals stacking context
Simon Fraser (smfr)
Comment 3
2008-07-15 17:04:19 PDT
Created
attachment 22296
[details]
Patch (with some FIXMES)
Dave Hyatt
Comment 4
2008-07-15 19:35:17 PDT
Comment on
attachment 22296
[details]
Patch (with some FIXMES) The property has to blend in order for this problem to be exposed. I think you only need the opacity and transform checks.
Simon Fraser (smfr)
Comment 5
2008-07-16 15:48:02 PDT
Created
attachment 22321
[details]
Patch, testcase, changelogs
Dave Hyatt
Comment 6
2008-07-16 15:55:46 PDT
Comment on
attachment 22321
[details]
Patch, testcase, changelogs r=me
Dean Jackson
Comment 7
2008-07-16 18:16:51 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M LayoutTests/ChangeLog A LayoutTests/transitions/opacity-transition-zindex-expected.txt A LayoutTests/transitions/opacity-transition-zindex.html M WebCore/ChangeLog M WebCore/page/AnimationController.cpp Committed
r35207
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug