2008-07-16  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt

        AnimationController needs to adjust z-index in the blended
        style in case opacity or transform were changed by blending.

        https://bugs.webkit.org/show_bug.cgi?id=20047

        Test: transitions/opacity-transition-zindex.html

        * page/AnimationController.cpp:
        (WebCore::AnimationController::updateImplicitAnimations):


Canonical link: https://commits.webkit.org/27638@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35207 268f45cc-cd09-0410-ab3c-d52691b4dbfc